# promptcrab

./: .env.example  .gitignore  CHANGELOG.md  README.md  README.zh-TW.md  prompt_rewrite_pipeline.py  pyproject.toml
.github/: MAINTAINERS.md
.github/workflows/: README.md  ci.yml  release-prepare.yml
scripts/: bump_calver.py  release_check.sh  render_release_notes.py
src/promptcrab/: __init__.py  __main__.py  backends.py  benchmark.py  cli.py  constants.py  errors.py  literal_checks.py  models.py  parsing.py  pipeline.py  preflight.py  prompts.py  release_tools.py
tests/: test_backends.py  test_benchmark.py  test_cli.py  test_literals.py  test_parsing.py  test_pipeline.py  test_prompts.py  test_release_tools.py
